<!--
  ~ Copyright (c) 2025.
  ~ @Author Phel Viwath
  ~ All rights reserved.
  ~
  -->

<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Library App</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="classic">Classic</string>
    <string name="modern">Modern</string>

    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="otp">OTP</string>
    <string name="username">Username</string>
    <string name="getOtp">Get OTP</string>
    <string name="system">Library Management System</string>
    <string name="sru">Svay Rieng University</string>
    <string name="login">Login</string>
    <string name="confirm">Confirm</string>
    <string name="verify">Verify</string>
    <string name="receive_code">Didn\'t you receive any code?</string>
    <string name="resent_code">RESENT NEW CODE</string>
    <string name="sent_code">Sent Code</string>
    <string name="Login">LOGIN</string>
    <string name="change_password">Change Password</string>
    <string name="please_enter_your_email_to_get_otp">Pleas enter your email we will send OTP code.</string>
    <string name="please_check_your_email_to_get_otp">Pleas check your email to get OTP code.</string>
    <string name="forgot">Forgot password</string>

    <string name="khmer">Khmer</string>
    <string name="english">English</string>
    <string name="kh">Kh</string>
    <string name="eng">Eng</string>

    <!-- Dashboard   -->
    <string name="weekly_visitor">Weekly Visitor</string>
    <string name="walk_icon">Walk Icon</string>
    <string name="total_entry_this_month">Total Entry Of This Month</string>
    <string name="borrow_int">10</string>
    <string name="entry_int">30</string>
    <string name="sponsor_int">20</string>
    <string name="entry_month_int">200</string>
    <string name="menu">Button menu</string>
    <string name="donate_text">Book Donated</string>
    <string name="entry_text">Entry Today</string>
    <string name="borrow_text">Book Borrow Today</string>
    <string name="welcome_text">WELCOME BACK PEOPLE</string>
    <string name="entry_percent">0% from yesterday</string>
    <string name="entry_month_percent">0% from yesterday</string>
    <string name="borrow_percent">0% from yesterday</string>
    <string name="sponsor_percent">0% from yesterday</string>
    <string name="major_visitor">Total Major Visitor</string>
    <string name="total_book_of_this_month">Total Book of This Month</string>
    <string name="entry_today">Entry Today</string>

    <!--    Major Name-->
    <string name="Eng">ENG</string>
    <string name="cs">CS</string>
    <string name="math">MATH</string>
    <string name="pa">PA</string>
    <string name="bus">BUS</string>

    <!-- Menu button -->
    <string name="btMenu">Menu</string>
    <string name="btDashboard">Dashboard</string>
    <string name="role">User</string>
    <string name="name">My name</string>
    <string name="qr">QR Student Entry</string>

    <!-- QR Fragment -->
    <string name="entry">Entry</string>
    <string name="entry_num">20</string>
    <string name="entry_desc">Current Entry Now</string>
    <string name="exit_desc">Current Exit Now</string>
    <string name="exited">Exited</string>
    <string name="exit_num">10</string>
    <string name="total">Total</string>
    <string name="total_num">30</string>
    <string name="total_desc">Total Entry</string>
    <string name="scan_here">Scan Your Card Here</string>
    <string name="tab_to_scan">Tab to scan!</string>
    <string name="major">Major</string>
    <string name="student_id">Student ID</string>
    <string name="student_name">Student Name</string>
    <string name="purpose">Purpose</string>

    <string name="dash">..........</string>
<!--    Purpose -->
    <string name="use_pc">Use PC</string>
    <string name="reading">Reading</string>
    <string name="assignment">Assignment</string>
    <string name="other">Other</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="flashlight">Flashlight</string>


    <string name="register">Register</string>
    <string name="Register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="register_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="forget_password">Forget password?</string>
    <string name="back_to_login">Back to login</string>

    <string name="create_account">Create new account.</string>

<!--    item attend detail-->
    <string name="no">No</string>
    <string name="studentId">ID</string>
    <string name="studentName">Student Name</string>
    <string name="gender">Gender</string>
    <string name="generation">Generation</string>
    <string name="entryTime">Entry Time</string>
    <string name="exitingTime">Exiting Time</string>
    <string name="status">Status</string>

    <string name="donatorName">Donator Name</string>
    <string name="donateDate">Donate Date</string>
    <string name="donateQuan">Donate Quan</string>

<!--    bottom navigation menu-->
    <string name="book">Book</string>
    <string name="student">Student</string>
    <string name="setting">Setting</string>

    <string name="themeText">ThemeText</string>


    <string name="user">User</string>
    <string name="admin">Admin</string>
    <string name="logout">Logout</string>
    <string name="theme">Theme</string>

<!--    Book fragment-->
    <string name="total_book">Total Books</string>
    <string name="total_donate_book">Total Donate</string>
    <string name="total_borrow">Total Borrow</string>
    <string name="total_exp">Total Expired</string>
    <string name="borrow_today">Borrow Today</string>
    <string name="return_today">Return Today</string>

    <string name="zero">0</string>

    <string name="overdue">Over Due</string>
    <string name="all">All</string>

    <string name="add_book">Add Books</string>
    <string name="borrowed">Borrowed</string>
    <string name="donation">Donation</string>
    <string name="backup">Backup</string>


    <string name="search">Search...</string>

    <string-array name="theme">
        <item>Light Mode</item>
        <item>Dark Mode</item>
        <item>System Default</item>
    </string-array>

    <string name="refresh">Refresh</string>

    <string name="develop">Develop by Viwath.</string>
    <string name="serverNote">Please wait 1 to 2 minutes for the server to wake up. Thank you for your patience!</string>
    <string name="borrowNote">You can borrow 2 book per 2 weeks.</string>
    <string name="upload_exel">Upload File</string>

    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="receive_date">Receive Date</string>
    <string name="publication">publication Year</string>

    <string name="borrow_date">Borrow Date</string>
    <string name="return_date">Return Date</string>
    <string name="new_return_date">New Return Date</string>
    <string name="returned">Returned</string>
    <string name="returns">Return</string>
    <string name="extend">Extend</string>

    <string name="book_id">Book ID</string>
    <string name="book_title">Book Title</string>
    <string name="college">College</string>
    <string name="language">Language</string>
    <string name="book_author">Author</string>
    <string name="book_genre">Genre</string>
    <string name="public_year">Publication Year</string>
    <string name="book_quan">Book Quan</string>
    <string name="borrow_quan">Borrow Quan</string>
    <string name="available_book">Available Book</string>
    <string name="submit">Submit</string>

    <string name="date">dd/mm/yyyy</string>

    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="borrow">Borrow</string>

    <string name="cancel_ic">⌫</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="create_pin">Create you PIN</string>
    <string name="confirm_pin">Confirm you PIN</string>

</resources>