<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="12">

    <TextView
        android:id="@+id/tvStudentId"
        android:background="@color/shutta_blue_85"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/studentId"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:layout_weight="2"
        android:gravity="start"
        android:minWidth="100dp" />

    <TextView
        android:id="@+id/tvStudentName"
        android:background="@color/shutta_blue_light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/studentName"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:layout_weight="6"
        android:gravity="start"
        android:minWidth="80dp" />

    <TextView
        android:id="@+id/tvGender"
        android:background="@color/shutta_blue_85"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:layout_weight="2"
        android:gravity="start"
        android:minWidth="90dp" />

    <TextView
        android:id="@+id/tvStatus"
        android:background="@color/shutta_blue_light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:layout_weight="2"
        android:gravity="start"
        android:minWidth="90dp" />

</LinearLayout>