<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/white"
    tools:context=".auth_feature.presentation.">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/sruLogo"
        android:layout_gravity="center_horizontal"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/sru_image" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        tools:ignore="ContentDescription" />
    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvGoSignUp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/login_signup_hint"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:background="@drawable/button_effect"
        android:layout_gravity="center_horizontal" />

</LinearLayout>